--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -11,6 +11,10 @@
 
     Text documents are often broken up into several sections and subsections. Each section is usually prefaced with a short title or heading that attempts to summarize the topic of the section it precedes. For instance this paragraph is preceded by the heading Heading Tags. The font of the section headings are usually larger and bolder than their subsection headings. This document uses headings to introduce topics such as HTML Documents, HTML Tags, Heading Tags, etc. HTML heading tags can be used to format plain text so that it renders in a browser as large headings. There are 6 heading tags: h1, h2, h3, h4, h5, and h6. Tag h1 is the largest heading and h6 is the smallest heading.
 
+    <h2>Paragraph Tag</h2>
+    <p>
+    This is a paragraph. We often separate a long set of sentences with vertical spaces to make the text easier to read. Browsers ignore vertical white spaces and render all the text as one single set of sentences. To force the browser to add vertical spacing, wrap the paragraphs you want to separate with the paragraph tag
+    </p>
     <p>
     This is the first paragraph. The paragraph tag is used to format vertical gaps between long pieces of text like this one.
     </p>
@@ -105,36 +109,34 @@
         <label for="text-fields-last-name">Last name:</label>
         <input type="text" id="text-fields-last-name"
                 placeholder="Doe" value="Wonderland"/>
-        <!-- copy rest of form elements here -->
+        <h2>Other field types</h2>
+        <label for="text-fields-email">
+        Email:
+        </label>
+        <input type="email"
+            placeholder="jdoe@somewhere.com"
+            id="text-fields-email"/><br/>
+        <label for="text-fields-salary-start">
+        Starting salary:
+        </label>
+        <input type="number"
+            id="text-fields-salary-start"
+            placeholder="1000"
+            value="100000"/><br/>
+        <label for="text-fields-rating">
+        Rating:
+        </label>
+        <input type="range" id="text-fields-rating"
+            placeholder="Doe"
+            max="5"
+            value="4"/><br/>
+        <label for="text-fields-dob">
+        Date of birth:
+        </label>
+        <input type="date"
+            id="text-fields-dob"
+            value="2000-01-21"/><br/>
     </form>
-
-    <h2>Other field types</h2>
-    <label for="text-fields-email">
-    Email:
-    </label>
-    <input type="email"
-        placeholder="jdoe@somewhere.com"
-        id="text-fields-email"/><br/>
-    <label for="text-fields-salary-start">
-    Starting salary:
-    </label>
-    <input type="number"
-        id="text-fields-salary-start"
-        placeholder="1000"
-        value="100000"/><br/>
-    <label for="text-fields-rating">
-    Rating:
-    </label>
-    <input type="range" id="text-fields-rating"
-        placeholder="Doe"
-        max="5"
-        value="4"/><br/>
-    <label for="text-fields-dob">
-    Date of birth:
-    </label>
-    <input type="date"
-        id="text-fields-dob"
-        value="2000-01-21"/><br/>
 
     <h2>Text boxes</h2>
     <form id="textarea">
@@ -215,5 +217,46 @@
 
     Checkout my <a href="other-page.html">other page</a>
 
+    <h2>Table of content</h2>
+    <ul>
+        <li><a href="#embedding-website">Embedding other websites</a></li>
+        <li><a href="#embedding-youtube">Embedding Youtube videos</a></li>
+        <li><a href="#embedding-slides">Embedding Google slide</a></li>
+    </ul>
+
+    <a name="embedding-website"></a>
+    <h2>Embedding other websites</h2>
+    <a href="#top">Top</a><br/>
+    <iframe width="600"
+            height="400"
+            src="https://en.wikipedia.org/wiki/SpaceX">
+    </iframe>
+
+    <a name="embedding-youtube"></a>
+    <h2>Embedding YouTube</h2>
+    <a href="#top">Top</a><br/>
+    <iframe width="560"
+        height="315"
+        src="https://www.youtube.com/embed/7CZTLogln34"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
+
+    <a name="embedding-slides"></a>
+    <h2>Embedding Google slides</h2>
+    <a href="#top">Top</a><br/>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQoIYM2gXzRLKt4q5D2-ZahG7zvVcAipkRvj5k9GVLiGDs8NPlLpO3Q08cPUKQbqhL6g8aZp1ZJSwrw/embed?start=false&loop=false&delayms=3000"
+        frameborder="0"
+        width="680"
+        height="418"
+        allowfullscreen="true"
+        mozallowfullscreen="true"
+        webkitallowfullscreen="true">
+    </iframe>
+    
+    </br></br>
+    <a href="svg/index.html">SVG Exercises</a>
 </body>
 </html>
