--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -256,7 +256,37 @@
         webkitallowfullscreen="true">
     </iframe>
     
-    </br></br>
-    <a href="svg/index.html">SVG Exercises</a>
+    </br>
+    <h2>Table of content</h2>
+    <ul>
+        <li><a href="#rectangle">Drawing rectangles</a></li>
+        <li><a href="#circle">Drawing circles</a></li>
+        <li><a href="#polygon">Drawing polygons</a></li>
+    </ul>
+
+    <a name="rectangle"></a>
+    <h2>Drawing rectangles</h2>
+
+    <svg width="300" height="100">
+       <rect width="300" height="100"
+             style="fill:rgb(0,0,255); stroke-width:10;
+       stroke:rgb(0,0,0)" />
+    </svg>
+
+    <a name="circle"></a>
+    <h2>Drawing circles</h2>
+
+    <svg width="100" height="100">
+    <circle cx="50" cy="50" r="40"
+            stroke="green" stroke-width="4" fill="yellow" />
+    </svg>
+
+    <a name="polygon"></a>
+    <h2>Drawing polygons</h2>
+
+    <svg width="300" height="200">
+    <polygon points="100,10 40,198 190,78 10,78 160,198"
+                style="fill:lime; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
+    </svg>
 </body>
 </html>
