--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -1,67 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <title>Tuiter Explore</title>
    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+   <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>
+   <link href="index.css" rel="stylesheet"/>
+   <link href="../styles.css" rel="stylesheet"/>
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           rel="stylesheet"/>
-    <link href="../styles.css" rel="stylesheet"/>
-    <link href="index.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+    crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Explore screen</title>
 </head>
 <body>
+    <div class="container" id="wd-explore"></div>
+    <script src="index.js" type="module"></script>
     <div class="container pt-1">
         <div class="row">
             <div class="col-sm-2 col-md-2 col-lg-1 col-xl-2 col-xzl-2">
-                <div class="list-group mb-1">
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-house-chimney d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Home</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action active">
-                       <i class="fa-solid fa-hashtag d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Explore</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-bell d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Notifications</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-envelope d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Messages</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-bookmark d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Bookmarks</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-list d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Lists</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-user d-inline"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">Profile</p>
-                    </a>
-                    <a href="#"
-                       class="list-group-item list-group-item-action">
-                       <i class="fa-solid fa-circle-minus"></i>
-                       <p class="d-none d-xl-inline d-xxl-inline">More</p>
-                    </a>
-                    <button class="btn btn-primary mt-1 rounded-pill ps-0 pe-0" width="100px">
-                        Tweet
-                    </button>
-                </div>
             </div>
             <div class="col-6 col-sm-10 col-md-10 col-lg-6 col-xl-6 col-xzl-6">
                 <div class="row mb-2">
