--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -3,7 +3,7 @@
 <head>
    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
    <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>
-   <link href="index.css" rel="stylesheet"/>
+   <link href="explore.css" rel="stylesheet"/>
    <link href="../styles.css" rel="stylesheet"/>
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           rel="stylesheet"/>
@@ -16,7 +16,7 @@
 <body>
     <div class="container" id="wd-explore"></div>
     <script src="index.js" type="module"></script>
-    <div class="container pt-1">
+    <!-- <div class="container pt-1">
         <div class="row">
             <div class="col-sm-2 col-md-2 col-lg-1 col-xl-2 col-xzl-2">
             </div>
@@ -268,6 +268,6 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
